# project-plus

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
mobile/: index.html  package-lock.json  package.json  vite.config.js
mobile/public/: sw.js
mobile/src/: App.vue  main.js  router.js
mobile/src/components/: Camera.vue  ErrorMessage.vue  Header.vue  ListView.vue  PrimaryButton.vue  SelectionList.vue  Tab.vue  ThemeButton.vue
mobile/src/composables/: index.js
mobile/src/data/: camera_context.js  module.js  session.js  work_instructions.js
mobile/src/pages/: AllocateEmployees.vue  Allocation.vue  EditInstructions.vue  Home.vue  InstallationPrompt.vue  Instructions.vue  Login.vue  ManageIT.vue  Profile.vue  ProjectSchedule.vue  TeamMembers.vue  TimesheetEntry.vue  WorkIT.vue  WorkITEntries.vue  WorkInstructions.vue
mobile/src/pages/icons/: CameraIcon.vue  InstructionsIcon.vue  PersonIcon.vue  ProjectOutline.vue  SwapIcon.vue
projectit/: api.py  hooks.py  modules.txt
projectit/fixtures/: custom_field.json  doctype_link.json  mobile_module_item.json  property_setter.json
projectit/projectit/: project.py  timesheet.py
projectit/projectit/doctype/employee_allocation_instruction/: employee_allocation_instruction.json  employee_allocation_instruction.py
projectit/projectit/doctype/mobile_module/: mobile_module.json  mobile_module.py
projectit/projectit/doctype/mobile_module_item/: mobile_module_item.js  mobile_module_item.json  mobile_module_item.py  test_mobile_module_item.py
projectit/public/js/: project.js
(+8 files in other folders)
